# FarmCast

./: .gitignore  README.md  environment.yaml  pyproject.toml
.github/workflows/: ci-tests.yml
code/: fast_farm_schema.yaml  parametrize_runs.py  turbsim_schema.yaml  validation.py  write_fastfarm.py  write_fastfarm_fsft.py  write_turbsim_in.py
examples/: create_surrogate_torque2024.py  generate_runs.py  parametrize_runs.py  slurm_example.sh
farmcast/: curtailment.py  fastfarm_schema.yaml  generate_cases.py  generate_openfast.py  generate_slurm_files.py  generate_turbsim_timesr.py  low_res_turbsim.py  turbsim.py  turbsim_schema.yaml  utils.py  write_fastfarm_fsft.py  write_turbsim_in.py
fastfarm/: FarmIEA3p4.fstf  FastFarmSimulation_WithWkAdT.fstf  generated.FarmIEA3p4.fstf
inflow/: inflow_T1.in
test/: test_examples.py  test_generate_turbsim_timesr.py
turbines/IEA-3.4-130-RWT/: IEA-3.4-130-RWT.RO.dbg  IEA-3.4-130-RWT.fst  IEA-3.4-130-RWT_DISCON.IN  IEA-3.4-130-RWT_T1.fst  IEA-3.4-130-RWT_T2.fst  IEA-3.4-130-RWT_T3.fst
turbines/rosco/: libdiscon.dylib
